Add git->https api endpoint
